# firmwareonboardingproject

./: CMakeLists.txt  README  README.md  cmake-variants.yaml  main.cpp  mbed_app.json5
